# mai.architecture

./: CMakeLists.txt  DROP TABLE archdb.sql  README.md  auth_index.yaml  auth_main.cpp  commands.sql  components.md  docker-compose.yml  get_cache.lua  get_no_cache.lua  load_data.cpp  mycontext.md  newdata.sql  nostart.sh  nostop.sh  order_main.cpp  order_service.yaml  performance.md  servic_service.yaml  service_main.cpp  task.md  test_cache.sh
auth_service/: Dockerfile  auth_handler.h  http_auth_request_factory.h  http_auth_server.h
config/: config.cpp
database/: auth.cpp  auth.h  database.cpp  database.h  order.cpp  order.h  service.cpp  service.h
mysql/: Dockerfile
order_service/: Dockerfile  http_order_server.h  http_request_factory.h  order_handler.h
proxysql/: Dockerfile
service_service/: Dockerfile  http_service_request_factory.h  http_service_server.h  service_handler.h
